<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_tool_1">
    </item>
    <item
        android:id="@+id/menu_activity_main_more"
        android:icon="@drawable/ic_more_vert_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/menu_tool_2">
        <menu>
            <item
                android:id="@+id/activity_main_more_notifications"
                android:title="@string/navigation_drawer_more_item_1"/>

            <item
                android:id="@+id/activity_main_more_help"
                android:title="@string/navigation_drawer_more_item_2"/>

            <item
                android:id="@+id/activity_main_more_about"
                android:title="@string/navigation_drawer_more_item_3"/>
        </menu>
    </item>
</menu>