<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Articles">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_top_stories"
                    android:icon="@drawable/ic_whatshot_black_24dp"
                    android:title="@string/navigation_drawer_articles_item_1" />
                <item
                    android:id="@+id/activity_main_drawer_most_popular"
                    android:icon="@drawable/ic_star_border_black_24dp"
                    android:title="@string/navigation_drawer_articles_item_2" />
                <item
                    android:id="@+id/activity_main_drawer_sports"
                    android:icon="@drawable/ic_fitness_center_black_24dp"
                    android:title="@string/navigation_drawer_articles_item_3" />
                <item
                    android:id="@+id/activity_main_drawer_search"
                    android:icon="@drawable/ic_search_black_24dp"
                    android:title="@string/navigation_drawer_articles_item_4" />
            </group>
        </menu>
    </item>

    <item android:title="More">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_notifications"
                    android:icon="@drawable/ic_notifications_black_24dp"
                    android:title="@string/navigation_drawer_more_item_1" />
                <item
                    android:id="@+id/activity_main_drawer_help"
                    android:icon="@drawable/ic_help_black_24dp"
                    android:title="@string/navigation_drawer_more_item_2" />
                <item
                    android:id="@+id/activity_main_drawer_about"
                    android:icon="@drawable/ic_attachment_black_24dp"
                    android:title="@string/navigation_drawer_more_item_3" />
            </group>
        </menu>
    </item>

</menu>